overflow style fix for left side bar

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,11 @@ Override Highlight
   margin-left: 10%;
 }
 
+/* overwrite overflow for business left sidebar*/
+.bcMPWx {
+  overflow-x: hidden;
+}
+
 /* ---------------------------------------------------------------------
 Contributors: Darien
 Styles for the business dashboard right sidebar
